--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.6.11",
     "chart.js": "^4.4.9",
+    "framer-motion": "^12.10.4",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
     "octokit": "^4.1.3",
