--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.6.11",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "chart.js": "^4.4.9",
-    "framer-motion": "^12.10.4",
+    "framer-motion": "^12.10.5",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
     "octokit": "^4.1.3",
     "react": "^19.0.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0"
