--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-beautiful-dnd": "^13.1.8",
     "chart.js": "^4.4.9",
     "framer-motion": "^12.10.5",
+    "gsap": "^3.13.0",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
     "octokit": "^4.1.3",
